<resources>
    <string name="app_name">The Grocery Shop</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1310012239090955</string>
    <string name="facebook_app_id" translatable="false">1310012239090955</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password_simple">Forgot Password?</string>
    <string name="signup_simple">SIGN UP</string>
    <string name="or">OR</string>
    <string name="need_help_caps">NEED HELP?</string>
    <string name="need_help_email_us">Need Help? <u>Email US</u></string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="bar_code_txt">BarCode Scanner</string>
    <string name="checkout_caps">CHECKOUT</string>
    <string name="total_ammount">Total Amount</string>
    <string name="total_items">Total Items</string>
    <string name="sub_total">Subtotal</string>
    <string name="coupon">Promo Discount</string>
    <string name="have_promo_code">Have a promo code?</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="tax_charges">Tax Charges</string>
    <string name="total_savings">Total Savings</string>
    <string name="tax">Tax :</string>
    <string name="price">Price :</string>
    <string name="saved">Savings :</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="business_email">Business Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="business_name">Business Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="business_address">Business Address</string>
    <string name="business_address_city">Business Address City</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="business_user">BUSINESS USER</string>
    <string name="terms_and_conditions" formatted="false">
        <![CDATA[<font color=\'#FFFFFF\'>I agree to </font><font color=\'#F9F1C0\'>Terms of Use</font><font color=\'#FFFFFF\'> & </font><font color=\'#F9F1C0\'>Privacy Policy</font>]]>
    </string>
    <string name="loading">Loading</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="confirm_caps">CONFIRM</string>
    <string name="otp_text">all_field_correctly sent a 4-digit \nConfirmation code via sms to</string>
    <string name="error_blank_username">Username is required.</string>
    <string name="error_blank_field">Please fill the field.</string>
    <string name="error_invalid_international_number">Contact number length must be between 6 to 15.</string>
    <string name="error_invalid_short_phone">The mobile number is too short, length must be at least 5.</string>
    <string name="error_invalid_long_phone">The mobile number length must not exceed 15 digits.</string>
    <string name="error_invalid_login_id">Invalid login Id</string>
    <string name="error_blank_phone">Please enter your mobile no.</string>
    <string name="error_blank_password">Please enter password to proceed.</string>
    <string name="all_field_correctly">Please fill all fields correctly.</string>
    <string name="error_blank_zip_code">Please enter the zip code to proceed.</string>
    <string name="error_blank_date_of_birth">Please enter Date of Birth.</string>
    <string name="error_blank_name_of_user">Please enter the name.</string>
    <string name="error_blank_first_name_of_user">Please enter the first name.</string>
    <string name="error_blank_last_name_of_user">Please enter the last name.</string>
    <string name="error_blank_user_name_of_user">Please enter the user name.</string>
    <string name="some_error_occoured">Some error occurred.</string>
    <string name="error_short_name_of_user">The name is too short, length must be at least 3.</string>
    <string name="error_short_user_name_of_user">The user name is too short, length must be at least 6.</string>
    <string name="error_short_first_name_of_user">The first name is too short, length must be at least 3.</string>
    <string name="error_short_last_name_of_user">The last name is too short, length must be at least 3.</string>
    <string name="error_long_name_of_user">The Name length must not exceed 50 characters.</string>
    <string name="error_long_user_name_of_user">The User Name length must not exceed 50 characters.</string>
    <string name="error_long_first_name_of_user">The First Name length must not exceed 50 characters.</string>
    <string name="error_long_last_name_of_user">The LastName length must not exceed 50 characters.</string>
    <string name="err_short_password">Password must be between 6 and 20 characters long.</string>
    <string name="err_short_newpassword">New Password must be between 6 and 20 characters long.</string>
    <string name="err_short_retypepassword">Confirm Password must be between 6 and 20 characters long.</string>
    <string name="error_internet_connection">Sorry, no internet connectivity detected.\nPlease reconnect and try again.</string>
    <string name="err_long_password">Password must be between 6 and 20 characters long.</string>
    <string name="err_password">Password must have atleast one numeric digit, one letter.</string>
    <string name="error_blank_cnfm_password">Please enter confirm password.</string>
    <string name="err_cnfm_password_not_match">Retyped password does not match new password.</string>
    <string name="err_cnfm_password_not_match1">Confirm password does not match password.</string>
    <string name="date_of_birth">Date of Birth (Optional)</string>
    <string name="ok">OK</string>
    <string name="error_blank_email">Please enter your email address.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="countries">Countries</string>
    <string name="name_code">COUNTRY NAME/CODE</string>
    <string name="title_activity_home_drawer">Home</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="create_new_list_caps">CREATE NEW LIST</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="list_name_caps">LIST NAME</string>
    <string name="list_description_caps">LIST DESCRIPTION</string>
    <string name="done_caps">DONE</string>
    <string name="you_saved_luggage">You have saved yourself from carrying home</string>
    <string name="kg_caps">KG</string>
    <string name="account_details">Account Details</string>
    <string name="store_credits_caps">STORE CREDITS</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_caps">HELP</string>
    <string name="rate">RATE</string>
    <string name="add_comment">ADD A COMMENT</string>
    <string name="start_typing">start typing here...</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Logout?</string>
    <string name="savings">Savings</string>
    <string name="language">Language</string>
    <string name="tgs_point">TGS Points</string>
    <string name="tgs_credit">TGS Credit</string>
    <string name="my_coupons">My Coupons</string>
    <string name="manage_my_recurring_order">Manage My Recurring Orders</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="notifications">Notifications</string>
    <string name="system_notifications">System Notifications</string>
    <string name="order_completed_caps">ORDER COMPLETED</string>
    <string name="rating_and_review">RATING &amp; REVIEW</string>
    <string name="review_caps">REVIEW</string>
    <string name="your_credited_balance_caps">YOUR CREDITED BALANCE</string>
    <string name="egp">EGP</string>
    <string name="invite_a_friend">INVITE A FRIEND &amp; EARN CREDITS</string>
    <string name="total_earn_points">TOTAL EARNED POINTS</string>
    <string name="earned_points">EARNED POINTS</string>
    <string name="earn_loyalty_points">EARNED LOYALTY POINTS</string>
    <string name="earn_referral_points">EARNED REFRAL POINTS</string>
    <string name="redeemed_points">REDEEMED POINTS</string>
    <string name="current_available_points">CURRENT AVAILABLE POINTS</string>
    <string name="convert_points">CONVERT POINTS</string>
    <string name="convert">CONVERT</string>
    <string name="life_time_saving">LIFE TIME SAVING</string>
    <string name="order_id">Order ID:</string>
    <string name="saved_caps">SAVED</string>
    <string name="my_saving">MY SAVING</string>
    <string name="saved_yourself_from_lugging">SAVED YOURSELF FROM LUGGING</string>
    <string name="lugging">LUGGING</string>
    <string name="saved_kilos_caps">SAVED KILOS</string>
    <string name="i_like_to_feedback">I\' D LIKE TO FEEDBACK ABOUT:</string>
    <string name="select_an_option">SELECT AN OPTION</string>
    <string name="enter_your_feedback">ENTER YOUR FEEDBACK</string>
    <string name="feedback">Feedback</string>
    <string name="version_number">Version Number</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="licences">Licences</string>
    <string name="how_can_we_help">HOW CAN WE HELP</string>
    <string name="call_us_caps">CALL US</string>
    <string name="or_email_us">OR\n\nEMAIL US</string>
    <string name="or_email_us1">\n\nor email us on</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="delivery_time">DELIVERY TIME</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_information">PAYMENT INFORMATION</string>
    <string name="delivery_boy_information">ORDER CAPTAIN INFORMATION</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="edit_order">EDIT ORDER</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="credit_card">Credit Card</string>
    <string name="add_to_list">ADD TO LIST</string>
    <string name="select_slot_to_receive">SELECT SLOT TO RECEIVE YOUR ORDER</string>
    <string name="please_tap_on_the_day">Please tap on the day and time which you need your scheduled order to be delivered</string>
    <string name="manually_caps">MANUALLY</string>
    <string name="over_a_map_caps">OVER A MAP</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="add_caps">ADD</string>
    <string name="enter_your_postal_code">ENTER NEW ADDRESS NAME</string>
    <string name="floor">Floor</string>
    <string name="unit">Apt number</string>
    <string name="date_colon">Date:</string>
    <string name="time_colon">Time:</string>
    <string name="no_of_items_colon1">No of Items :</string>
    <string name="date_of_placing_order_colon">Date of placing order:</string>
    <string name="order_type">Order Type:</string>
    <string name="order_amount_colon">Order Amount:</string>
    <string name="payment_method_colon">Payment Method:</string>
    <string name="order_status_colon">Order Status:</string>
    <string name="add1">Add</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_amount">Add Amount</string>
    <string name="create_a_new_list">create new Wish List</string>
    <string name="no_wishlist_text">There is no Wish List. Please create new one to add product.</string>
    <string name="done_wishlist">Done</string>
    <string name="order_id1">Order ID</string>
    <string name="region_colon">Region:</string>
</resources>