<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bar_code_menu"
        android:orderInCategory="100"
        android:title="@string/bar_code_txt"
        android:icon="@drawable/barcode"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/serach_menu"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/icon_search"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/cartMenu"
        android:orderInCategory="100"
        android:title="@string/shopping_cart"
        app:actionLayout="@layout/menu_cart_layout"
        app:showAsAction="always" />
</menu>