<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="490dp"
    android:background="@color/purple_bg"
    android:maxHeight="490dp">

    <Button
        android:id="@+id/btn_create_new_list"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/accent_btn"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/create_a_new_list"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_dp18"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_wish_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutBottom"
        android:layout_below="@id/btn_create_new_list"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtViewNoWishList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/no_wishlist_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_dp15" />

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/accent_btn"
            android:gravity="center"
            android:text="@string/cancel_caps"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dp16"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_done"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/accent_btn"
            android:gravity="center"
            android:text="@string/done_wishlist"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dp16"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>