<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:id="@+id/base_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_bg">

        <thegroceryshop.com.custom.loader.LoaderLayout
            android:id="@+id/add_credit_loader_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp80"
            app:loader_layout_progress_color="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp30"
                    android:text="@string/your_credited_balance_caps"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xlarge" />

                <TextView
                    android:id="@+id/add_credit_txt_credit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp15"
                    android:paddingLeft="@dimen/dp15"
                    android:paddingRight="@dimen/dp15"
                    android:text="EGP 100.00"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xlarge"
                    android:textStyle="bold" />

            </LinearLayout>

        </thegroceryshop.com.custom.loader.LoaderLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/red_line_color"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp15"
                android:text="@string/add_amount"
                android:textColor="@color/white"
                android:textSize="@dimen/text_nrml" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20">

                <Button
                    android:id="@+id/add_credit_btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/purple_bg"
                    android:text="@string/add1"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/add_credit_edt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_toLeftOf="@+id/add_credit_btn_add"
                    android:background="@color/white"
                    android:digits="0123456789."
                    android:hint="@string/enter_amount"
                    android:inputType="phone"
                    android:textSize="@dimen/text_nrml"
                    android:padding="@dimen/dp5" />


            </RelativeLayout>

        </LinearLayout>


    </FrameLayout>


</LinearLayout>